<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A8BAE8"
    tools:context=".Registro_Usuario">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageView"
        android:layout_width="149dp"
        android:layout_height="140dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/logofdbx"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etUserNew"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_marginTop="36dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/et_Usuario"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/etNombres"
        app:layout_constraintTop_toBottomOf="@+id/circleImageView" />

    <EditText
        android:id="@+id/etNombres"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_marginTop="10dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/et_nombres"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/spTipoUser"
        app:layout_constraintTop_toBottomOf="@+id/etUserNew" />

    <Spinner
        android:id="@+id/spTipoUser"
        android:layout_width="212dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/etPassNew"
        app:layout_constraintTop_toBottomOf="@+id/etNombres" />

    <EditText
        android:id="@+id/etPassNew"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_marginTop="10dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/et_password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/etRePass"
        app:layout_constraintTop_toBottomOf="@+id/spTipoUser" />

    <EditText
        android:id="@+id/etRePass"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_marginStart="102dp"
        android:layout_marginTop="10dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/et_re_password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassNew" />

    <Button
        android:id="@+id/btnRegUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="95dp"
        android:layout_marginTop="40dp"
        android:text="@string/btn_registrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRePass" />

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="40dp"
        android:text="@string/btn_cancelar"
        app:layout_constraintStart_toEndOf="@+id/btnRegUser"
        app:layout_constraintTop_toBottomOf="@+id/etRePass" />


</androidx.constraintlayout.widget.ConstraintLayout>